[gd_scene load_steps=3 format=3 uid="uid://bn2t7w7qd1ukk"]

[ext_resource type="Script" uid="uid://nvoix2i0hm6p" path="res://scenes/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://d3e4qry34uwin" path="res://assets/wp11936661-cyberpunk-pixel-wallpapers.png" id="2_ekxnf"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_l6cm7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 282.0
offset_top = 200.0
offset_right = 874.0
offset_bottom = 586.0

[node name="NewGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.898039, 1, 0, 1)
theme_override_font_sizes/font_size = 40
text = "New Game
"
flat = true

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.898039, 1, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Continue"
flat = true

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.898039, 1, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Settings"
flat = true

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.898039, 1, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Credits"
flat = true

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.898039, 1, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Exit"
flat = true

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(569.5, 331.25)
scale = Vector2(0.299219, 0.30625)
texture = ExtResource("2_ekxnf")

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
